syntax = "proto3";

package meteroid.api.products.v1;

import "common/v1/pagination.proto";
import "api/products/v1/models.proto";

message CreateProductRequest {
  string name = 1;
  optional string description = 2;
  string family_local_id = 3;
  // tax, custom fields etc
}

message CreateProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  string family_local_id = 1;
  meteroid.common.v1.Pagination pagination = 2;
}

message ListProductsResponse {
  repeated ProductMeta products = 1;
  meteroid.common.v1.PaginationResponse pagination_meta = 2;
}

message SearchProductsRequest {
  string family_local_id = 1;
  optional string query = 2;
  meteroid.common.v1.Pagination pagination = 3;
}

message SearchProductsResponse {
  repeated ProductMeta products = 1;
  meteroid.common.v1.PaginationResponse pagination_meta = 2;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

service ProductsService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
}
